2009-01-27  Philip Withnall  <philip@tecnocode.co.uk>

	* src/link-factories/:
	* src/links/: Remove directories which should've been removed when
	renaming links to events.

2009-01-27  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main.c:
	* src/main.h: Fix a compilation error when compiling with -fno-common.

2009-01-14  Philip Withnall  <philip@tecnocode.co.uk>

	* data/almanah.schemas.in:
	* src/main-window.c (almanah_main_window_new),
	(mw_preferences_activate_cb),
	(almanah_main_window_enable_spell_checking),
	(almanah_main_window_disable_spell_checking):
	* src/main-window.h:
	* src/main.c (main):
	* src/preferences-dialog.c (almanah_preferences_dialog_init),
	(almanah_preferences_dialog_dispose),
	(almanah_preferences_dialog_new),
	(spell_checking_enabled_notify_cb),
	(pd_spell_checking_enabled_check_button_toggled_cb):
	Allow spell checking to be disabled at runtime with a GConf option.
	(Closes: #567359)

2008-12-24  Philip Withnall  <philip@tecnocode.co.uk>

	* src/printing.c (print_entry): Add a default margin of 20px when
	printing. (Closes: #564706)

2008-12-20  Philip Withnall  <philip@tecnocode.co.uk>

	* data/almanah.ui:
	* src/main-window.c (mw_page_setup_activate_cb),
	(mw_print_preview_activate_cb), (mw_print_activate_cb):
	* src/main.c (storage_manager_disconnected_cb), (main):
	* src/main.h:
	* src/printing.c (custom_widget_apply_cb), (almanah_print_entries),
	(almanah_print_page_setup):
	* src/printing.h: Add Page Setup and Print Preview menu entries,
	and improve the print settings code. (Helps: #564706)

2008-12-13  Philip Withnall  <philip@tecnocode.co.uk>

	* data/almanah.ui:
	* src/Makefile.am:
	* src/definition-manager-window.c
	(almanah_definition_manager_window_class_init),
	(almanah_definition_manager_window_init), (definitions_dispose_cb),
	(almanah_definition_manager_window_dispose),
	(almanah_definition_manager_window_new),
	(dmw_definition_tree_view_row_activated_cb),