@@ -1,5 +1,12 @@
 2009-01-27  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* src/event-factories/calendar-sources.c: Updated from gnome-panel
+	trunk.
+	* src/main.c:
+	* src/main.h: Fixed copyright headers to update the year.
+
+2009-01-27  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* src/link-factories/:
 	* src/links/: Remove directories which should've been removed when
 	renaming links to events.
